some lines updated

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="search">
                         <h2 class="pad-b">Search</h2>
                         <div class="search-bar pad-s">
-                            <input type="text" placeholder="Search here">
+                            <input type="text" placeholder="Search here" class="search-bar-input">
                             <a href="#"><span class="material-symbols-outlined">search</span></a>
                         </div>
                     </div>
@@ -100,8 +100,8 @@
                 <!-- items to be shop -->
                 <div class="col4">
                     <!-- row -->
-                    <div class="row2">
-                        <div class="col5">
+                    <div class="row2 grid">
+                        <div class="col5 shop-list">
                             <div class="bg-c-item">
                                 <div class="heart"><img src="./img/heart.png" alt="icon"></div>
                                 <img src="./img/SHATTAF HAND SPRAY-3.png" alt="image">
@@ -112,7 +112,7 @@
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum ducimus sint quaerat rerum, quisquam sapiente quasi harum deserunt.</p>
                             
                         </div>
-                        <div class="col5">
+                        <div class="col5 shop-list">
                             <div class="bg-c-item">
                                 <div class="heart"><img src="./img/heart.png" alt="icon"></div>
                                 <img src="./img/SHATTAF HAND SPRAY-3.png" alt="image">
@@ -124,8 +124,7 @@
                         </div>
                     </div>
                     <!-- row -->
-                    <div class="row2">
-                        <div class="col5">
+                        <div class="col5 shop-list">
                             <div class="bg-c-item">
                                 <div class="heart"><img src="./img/heart.png" alt="icon"></div>
                                 <img src="./img/SHATTAF HAND SPRAY-3.png" alt="image">
@@ -135,7 +134,7 @@
                             <P>Posted On May 28</P>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum ducimus sint quaerat rerum, quisquam sapiente quasi harum deserunt.</p>
                         </div>
-                        <div class="col5">
+                        <div class="col5 shop-list">
                             <div class="bg-c-item">
                                 <div class="heart"><img src="./img/heart.png" alt="icon"></div>
                                 <img src="./img/SHATTAF HAND SPRAY-3.png" alt="image">
@@ -145,7 +144,7 @@
                             <P>Posted On May 28</P>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum ducimus sint quaerat rerum, quisquam sapiente quasi harum deserunt.</p>
                         </div>
-                    </div>
+                
                     <!-- row 3 -->
                     <div class="row">
                         <a href="#"></a>
