font size, image size and some spacings are updateds

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <h2 class="pad-b">Search</h2>
                         <div class="search-bar pad-s">
                             <input type="text" placeholder="Search here" class="search-bar-input">
-                            <a href="#"><span class="material-symbols-outlined search-sym">search</span></a>
+                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                         </div>
                     </div>
                     <div class="category">
@@ -106,16 +106,14 @@
                             <div class="shop-list">
                                 <div class="bg-c-item">
                                     <div class="heart"><img src="./img/heart.png" alt="icon"></div>
-                                    <div class="shop-item"><img src="./img/SHATTAF HAND SPRAY-3.png" alt="image" width="186" height="250"></div>
+                                    <div class="shop-item"><img src="./img/SHATTAF-1.png" alt="image"></div>
                                     <p>US $ 2.5-3.5 / piece</p>
                                 </div>
                                 <h4>Integral Round Shataff Handdeled Toilet Bidet Sprayer Hand Sprayer (HY2393)</h4>
                                 <P>Posted On May 28</P>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum ducimus sint quaerat rerum, quisquam sapiente quasi harum deserunt.</p>
                                 <div class="button">
-                                    <button class="btn-cart">Buy Now<span class="material-symbols-outlined">
-                                        shopping_cart
-                                    </span></button>
+                                    <button class="btn-cart">Buy Now<i class="fa-solid fa-cart-shopping"></i></button>
                                     <button class="add-cart">Add to Cart</button>
                                 </div>
                             </div>
@@ -124,16 +122,14 @@
                             <div class="shop-list">
                                 <div class="bg-c-item">
                                     <div class="heart"><img src="./img/heart.png" alt="icon"></div>
-                                    <div class="shop-item"><img src="./img/SHATTAF HAND SPRAY-4.png" alt="image" width="186" height="250"></div>
+                                    <div class="shop-item"><img src="./img/SHATTAF-2.png" alt="image"></div>
                                     <p>US $ 2.5-3.5 / piece</p>
                                 </div>
                                 <h4>Integral Round Shataff Handdeled Toilet Bidet Sprayer Hand Sprayer (HY2393)</h4>
                                 <P>Posted On May 28</P>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum ducimus sint quaerat rerum, quisquam sapiente quasi harum deserunt.</p>
                                 <div class="button">
-                                    <button class="btn-cart">Buy Now<span class="material-symbols-outlined">
-                                        shopping_cart
-                                    </span></button>
+                                    <button class="btn-cart">Buy Now<i class="fa-solid fa-cart-shopping"></i></button>
                                     <button class="add-cart">Add to Cart</button>
                                 </div>
                             </div>
@@ -143,16 +139,14 @@
                             <div class="shop-list">
                                 <div class="bg-c-item">
                                     <div class="heart"><img src="./img/heart.png" alt="icon"></div>
-                                    <div class="shop-item"><img src="./img/SHATTAF HAND SPRAY-5.png" alt="image" width="186" height="250"></div>
+                                    <div class="shop-item"><img src="./img/SHATTAF-3.png" alt="image"></div>
                                     <p>US $ 2.5-3.5 / piece</p>
                                 </div>
                                 <h4>Integral Round Shataff Handdeled Toilet Bidet Sprayer Hand Sprayer (HY2393)</h4>
                                 <P>Posted On May 28</P>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum ducimus sint quaerat rerum, quisquam sapiente quasi harum deserunt.</p>
                                 <div class="button">
-                                    <button class="btn-cart">Buy Now<span class="material-symbols-outlined">
-                                        shopping_cart
-                                    </span></button>
+                                    <button class="btn-cart">Buy Now<i class="fa-solid fa-cart-shopping"></i></i></button>
                                     <button class="add-cart">Add to Cart</button>
                                 </div>
                             </div>
@@ -161,16 +155,14 @@
                             <div class="shop-list">
                                 <div class="bg-c-item">
                                     <div class="heart"><img src="./img/heart.png" alt="icon"></div>
-                                    <div class="shop-item"><img src="./img/SHATTAF HAND SPRAY-6.png" alt="image" width="186" height="250"></div>
+                                    <div class="shop-item"><img src="./img/SHATTAF-5.png" alt="image"></div>
                                     <p>US $ 2.5-3.5 / piece</p>
                                 </div>
                                 <h4>Integral Round Shataff Handdeled Toilet Bidet Sprayer Hand Sprayer (HY2393)</h4>
                                 <P>Posted On May 28</P>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum ducimus sint quaerat rerum, quisquam sapiente quasi harum deserunt.</p>
                                 <div class="button">
-                                    <button class="btn-cart">Buy Now<span class="material-symbols-outlined">
-                                        shopping_cart
-                                    </span></button>
+                                    <button class="btn-cart">Buy Now<i class="fa-solid fa-cart-shopping"></i></button>
                                     <button class="add-cart">Add to Cart</button>
                                 </div>
                             </div>
@@ -180,9 +172,7 @@
                     <div class="nxt-page">
                         <a href="#" class="active-page">1</a>
                         <a href="#">2</a>
-                        <a href="#"><span class="material-symbols-outlined">
-                            navigate_next
-                            </span></a>
+                        <a href="#"><i class="fa-solid fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -195,7 +185,7 @@
             <!-- About Us -->
                 <div class="about-us">
                     <h2>ABOUT US</h2>
-                    <p>______</p>
+                    <p>________</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus atque unde laudantium officiis ut id recusandae, itaque eos fugiat, quam, magnam cumque dolorem labore ullam aut amet repudiandae? Inventore, molestiae.</p>
                     <div class="social-links">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -208,7 +198,7 @@
                 <div class="quick-link">
                     <div>
                         <h2>QUICK LINKS</h2>
-                        <p>______</p>
+                        <p>________</p>
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">About Us</a></li>
@@ -221,7 +211,7 @@
                 <!-- Leatest post -->
                 <div class="leatest-post">
                     <h2>LEATEST POST</h2>
-                    <p>______</p>
+                    <p>________</p>
                     <!-- jan 1 news -->
                     <div class="leatest">
                         <div class="leatest-no">
